# crewai-tutorial

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  report.md
frontend/: package-lock.json
frontend/src/: App.css  App.tsx  index.css
src/api/: main.py
src/api/routers/: crew.py
src/api/schemas/: crew.py
src/api/services/: job_store.py
src/crewai_tutorial/: crew.py  main.py
src/crewai_tutorial/config/: agents.yaml  tasks.yaml
src/crewai_tutorial/tools/: custom_tool.py
