[project]
name = "crewai_tutorial"
version = "0.1.0"
description = "crewai-tutorial using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.2"
]

[project.scripts]
crewai_tutorial = "crewai_tutorial.main:run"
run_crew = "crewai_tutorial.main:run"
train = "crewai_tutorial.main:train"
replay = "crewai_tutorial.main:replay"
test = "crewai_tutorial.main:test"
run_with_trigger = "crewai_tutorial.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
